Fix intentional spelling mistake

--- a/Sections/Mains/baked_mac_and_cheese.tex
+++ b/Sections/Mains/baked_mac_and_cheese.tex
@@ -27,7 +27,7 @@
 	
 	\preparation
 	{
-		\step Die Nudenln nach Packungsanleitung al dente kochen.
+		\step Die Nudeln nach Packungsanleitung al dente kochen.
 		\step Währenddessen die Butter in einer Pfanne schmelzen.
 		\step Das Mehl einrühren, nach und nach unter Rühren die Milch hinzufügen. 4-5 Minuten köcheln lassen bis die Sauce dicker wird.
 		\step Den Käse hinzufügen und rühren bis er geschmolzen ist. Mit Salz, Senf und Cayennepfeffer abschmecken.
