Fix spelling mistake

--- a/Sections/Mains/baked_mac_and_cheese.tex
+++ b/Sections/Mains/baked_mac_and_cheese.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Baked Macaroni and Chese}
+	{Baked Macaroni and Cheese}
 	\graph
 	{
 		small=pictures/maccheese/maccheese.jpg
