Add alternative recipe with gin

--- a/Sections/Cocktails/moscowmule.tex
+++ b/Sections/Cocktails/moscowmule.tex
@@ -28,4 +28,9 @@
 		\step Limettensaft dazu geben
 		\step Mit Ginger Bier auffüllen
 	}
+
+	\hint	
+	{
+		Funktioniert auch mit Gin
+	}
 \end{recipe}
