Add sweet pretzel recipe

--- a/Sections/Bread.tex
+++ b/Sections/Bread.tex
@@ -1,4 +1,4 @@
-\section{Snacks}
+\section{Brot}
 
 \input{Sections/Bread/zopf.tex}
 \newpage
@@ -10,6 +10,9 @@
 \newpage
 
 \input{Sections/Bread/zuercherbrot.tex}
-\newpage
 
+\newpage
 \input{Sections/Bread/brioche.tex}
+
+\newpage
+\input{Sections/Bread/sweet_pretzels.tex}
