--- a/Sections/Bread/sweet_pretzels.tex
+++ b/Sections/Bread/sweet_pretzels.tex
@@ -7,7 +7,7 @@
 	calory,
 	source=https://www.sweet-family.de/rezept/suesse-brezeln
 	]
-	{Süsse Bretzel}
+	{Süsse Brezel}
 	\graph
 	{
 		small=pictures/sweet_pretzels/sweet_pretzels.jpg
@@ -26,8 +26,8 @@
 	
 	\preparation
 	{
-		\step Hefe zerbröckeln und mit 6 Esslöffel Milch glattrühren 
-		\step Mehl in eine Schüssel sieben, eine Mulde hineindrücken und Hefemlich hineingiessen. 10 Minuten gehen lassen.
+		\step Die Hefe zerbröckeln und mit 6 Esslöffel Milch glattrühren 
+		\step Mehl in eine Schüssel sieben, eine Mulde hineindrücken und die Hefe hineingiessen. 10 Minuten gehen lassen.
 		\step Zucker, Butter, restliche Milch, Salz und 1 Ei zugeben und alles zu einem Teig rühren
 		\step Zugedeckt mindestens 30 Minuten gehen lassen
 		\step Teig nochmal durchkneten und in ca. 10 Portionen aufteilen
