Add missing pancake recipe

--- a/Sections/Breakfast/pancakes.tex
+++ b/Sections/Breakfast/pancakes.tex
@@ -1,1 +1,41 @@
-\newpage
+\begin{recipe}
+	[
+	preparationtime = {\unit[15]{min}},
+	portion = {\portion{4}},
+	calory,
+	source
+	]
+	{Pancakes}
+	\graph
+	{
+		small=pictures/pancakes/pancakes.jpg
+	}
+	
+	\ingredients
+	{
+		2 & Eier \\
+		& Salz \\
+		\unit[1]{Pack} & Vanillezucker \\
+		\unit[1]{Pack} & Backpulver \\
+		\unit[1]{Fl"aschchen} & Vanillearoma \\
+		\unit[400]{g} & Mehl \\
+		\unit[410]{g} & Milch \\
+		& Butter \\
+		diverse & Toppings \\		
+	}
+	
+	\preparation
+	{
+		\step Eier trennen und Eiweiss mit einer Prise Salz steif schlagen.
+		\step Eigelb, Vanillezucker, Backpulver und Vanillearoma zusammen mit einer Prise Salz vermischen.
+		\step Mehl und Milch unterheben und r"uhren bis Teigmasse eine cremige Konsistenz hat.
+		\step Eiweiss unterheben.
+		\step Etwas Butter in Pfanne schmelzen und Pancake ausbacken.
+		\step Zusammen mit Toppings servieren.
+	}
+	\hint
+	{
+		Als Toppings geeignet sind diverse Fr"uchte wie Blau- oder Erdbeeren zusammen mit Nutella, Ahornsirup oder Mascarpone.
+	}
+	
+\end{recipe}
