--- a/Sections/Breakfast/pancakes.tex
+++ b/Sections/Breakfast/pancakes.tex
@@ -17,7 +17,7 @@
 		& Salz \\
 		\unit[1]{Pack} & Vanillezucker \\
 		\unit[1]{Pack} & Backpulver \\
-		\unit[1]{Fl"aschchen} & Vanillearoma \\
+		\unit[1]{Fläschchen} & Vanillearoma \\
 		\unit[400]{g} & Mehl \\
 		\unit[410]{g} & Milch \\
 		& Butter \\
@@ -28,14 +28,14 @@
 	{
 		\step Eier trennen und Eiweiss mit einer Prise Salz steif schlagen.
 		\step Eigelb, Vanillezucker, Backpulver und Vanillearoma zusammen mit einer Prise Salz vermischen.
-		\step Mehl und Milch unterheben und r"uhren bis Teigmasse eine cremige Konsistenz hat.
+		\step Mehl und Milch unterheben und rühren bis Teigmasse eine cremige Konsistenz hat.
 		\step Eiweiss unterheben.
 		\step Etwas Butter in Pfanne schmelzen und Pancake ausbacken.
 		\step Zusammen mit Toppings servieren.
 	}
 	\hint
 	{
-		Als Toppings geeignet sind diverse Fr"uchte wie Blau- oder Erdbeeren zusammen mit Nutella, Ahornsirup oder Mascarpone.
+		Als Toppings geeignet sind diverse Früchte wie Blau- oder Erdbeeren zusammen mit Nutella, Ahornsirup oder Mascarpone.
 	}
 	
 \end{recipe}
