--- a/Sections/Smoothies/bananasmoothie.tex
+++ b/Sections/Smoothies/bananasmoothie.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Bananansmoothie}
+	{Bananen-Smoothie}
 	
 	\graph
 	{
@@ -17,7 +17,7 @@
 	\ingredients
 	{
 		\unit[2] & Bananen (gefroren) \\
-		\unit[1]{Becher} & griechieser Yogurth \\
+		\unit[1]{Becher} & griechischer Joghurt \\
 		\unit[1]{Becher} & Milch \\
 		\unit[1] & Vanilleschote
 	}
