--- a/Sections/Mains.tex
+++ b/Sections/Mains.tex
@@ -58,3 +58,9 @@
 
 \newpage
 \input{Sections/Mains/kuerbistarte.tex}
+
+\newpage
+\input{Sections/Mains/nudelhackfleisch.tex}
+
+\newpage
+\input{Sections/Mains/kichererbsencurry.tex}
