--- a/Sections/Breakfast/tomatenomelette.tex
+++ b/Sections/Breakfast/tomatenomelette.tex
@@ -17,7 +17,7 @@
 		\unit[2]{EL} & Rahm \\
 		& Salz \\
 		& Pfeffer \\
-		\unit[60]{g} & Rebikäse \\
+		\unit[60]{g} & Reibkäse \\
 		\unit[2] & Frühlingszwiebeln \\
 		\unit[30]{g} & Rucola \\
 		\unit[2]{Stiele} & glatte Petersilie \\
@@ -27,10 +27,10 @@
 	
 	\preparation
 	{
-		\step Rucola waschen, tochnen und fein hacken. Frühlingszwiebeln waschen und in dünne Scheiben schneiden. Petersilienblätter abzupfen und grob hacken.
-		\step Eier mit Rahmn verquirlen. Salzen, Pfeffern und den Käse unterrühren. 
+		\step Rucola waschen, trocknen und fein hacken. Frühlingszwiebeln waschen und in dünne Scheiben schneiden. Petersilie abzupfen und grob hacken.
+		\step Eier mit Rahm verquirlen. Salzen, Pfeffern und den Käse unterrühren. 
 		\step  Butter und Öl in einer beschichteten Pfanne erhitzen. Die Hälfte der Frühlingszwiebeln darin 1–2 Minuten dünsten.
-		\step Die restlichen Frühlingszwiebeln und die Eimasse zugeben, mit Rucola und Petersilie bestreuen.
+		\step Die restlichen Frühlingszwiebeln und die Eiermasse zugeben, mit Rucola und Petersilie bestreuen.
 		\step Zugedeckt 10–12 Minuten bei mittlerer Hitze stocken lassen.
 		\step  Omelette auf eine Platte gleiten lassen und sofort servieren.
 	}
