--- a/Sections/Mains/kichererbsencurry.tex
+++ b/Sections/Mains/kichererbsencurry.tex
@@ -31,19 +31,19 @@
 	
 	\preparation
 	{
-		\step Die Kichererbsen mit kaltem Wasser bedeckt mindestens 12 Stunden, besser aber länger, einweichen. Dann abschütten und kurz kalt abspülen.
+		\step Die Kichererbsen mit kaltem Wasser bedeckt mindestens 12 Stunden, besser aber länger, einweichen. Dann abgiessen und kurz kalt abspülen.
 		\step Die Kichererbsen in eine Pfanne geben und wieder mit kaltem Wasser bedecken. Aufkochen, dann zugedeckt etwa 30-40 Minuten weich kochen.
 		\step Rüebli schälen und in etwa 1 cm dicke Scheiben schneiden. Die Zwiebel schälen und klein würfeln. Knoblauchzehen und den Ingwer ebenfalls schälen und fein hacken. 
-		\step Butter erhitzen. Zwiebel, Knoblauch und Ingwer darin andünsten. Dann die Rüebli beifügen, den Curry darüberstäuben, alles gut mischen und kurz mitdünsten.
+		\step Butter erhitzen. Zwiebel, Knoblauch und Ingwer darin andünsten. Dann die Rüebli beifügen, den Curry darüber stäuben, alles gut mischen und kurz mitdünsten.
 		\step Dann die Kokosmilch beifügen und ebenfalls aufkochen.
 		\step Zuletzt die gekochten und gut abgetropften Kichererbsen dazugeben und alles zugedeckt so lange kochen lassen, bis die Rüebli weich sind. 
-		\step Inzwischen den Spinat waschen und in eine Schüssel geben. Etwa 1 Liter Salzwasser aufkochen und über den Spinat giessen. So lange einweichen lassen, bis der Spinat zusammengefallen ist. In ein Sieb abschütten und mit einer Kelle sehr gut ausdrücken.
+		\step Inzwischen den Spinat waschen und in eine Schüssel geben. Etwa 1 Liter Salzwasser aufkochen und über den Spinat giessen. So lange einweichen lassen, bis der Spinat zusammengefallen ist. In ein Sieb abgiessen und mit einer Kelle sehr gut ausdrücken.
 		\step Am Schluss der Garzeit den Spinat unter das Kichererbsen-Curry mischen und noch 2–3 Minuten leise kochen lassen. Mit Salz und Pfeffer nachwürzen.
 	}
 
 	\hint
 	{
-		Getrocknete Kichererbsen müssen unbedingt mindestens 12 Stunden in kaltem Wasser eingeweicht werden, damit sie richtig weich werden. Dann beträgt ihre Garzeit etwa 1 Stunde. Werden Kichererbsen 24 Stunden eingeweicht, haben sie nur noch 25 bis 40 Minuten zum Garen. Vorgekochte Kichererbsen aus der Dose kalt abspülen, anschliessend 1 Minute in kochendes Wasser geben, dann abschütten und nach Rezept verwenden; auf diese Weise schmecken sie wie frisch. 
+		Getrocknete Kichererbsen müssen unbedingt mindestens 12 Stunden in kaltem Wasser eingeweicht werden, damit sie richtig weich werden. Dann beträgt ihre Garzeit etwa 1 Stunde. Werden Kichererbsen 24 Stunden eingeweicht, haben sie nur noch 25 bis 40 Minuten zum Garen. Vorgekochte Kichererbsen aus der Dose kalt abspülen, anschliessend 1 Minute in kochendes Wasser geben und nach Rezept verwenden; auf diese Weise schmecken sie wie frisch. 
 	}
 	
 \end{recipe}
