--- a/Sections/Mains/nudelhackfleisch.tex
+++ b/Sections/Mains/nudelhackfleisch.tex
@@ -20,7 +20,7 @@
 		1 & Knoblauchzehe \\
 		2 & Paprikas \\
 		\unit[2]{TL} & Olivenöl \\
-		\unit[200]{g} & Rindshackfleisch \\
+		\unit[200]{g} & Rinderhackfleisch \\
 		\unit[100]{g} & Feta \\
 		\unit[10]{g} & Petersilie \\	
 		& Salz \\
@@ -30,7 +30,7 @@
 	
 	\preparation
 	{
-		\step Nudeln nach Packungsanleitung in reichlich Salzwasser bissfest kochen. Anschließend abgießen und abtropfen lassen.
+		\step Nudeln nach Packungsanleitung in reichlich Salzwasser bissfest kochen. Anschliessend abgiessen und abtropfen lassen.
 		\step Inzwischen Zwiebel und Knoblauch schälen und hacken. Paprika putzen, waschen und in Streifen schneiden.
 		\step 1 TL Öl in einer großen Pfanne erhitzen und Hackfleisch darin bei mittlerer Hitze unter Rühren krümelig 8 Minuten braten, mit Salz, Pfeffer, Cayennepfeffer. Auf einer Seite der Pfanne warm halten.
 		\step 1 TL Öl in einer gleichen Pfanne erhitzen, Zwiebel und Knoblauch bei mittlerer Hitze 2 Minuten anbraten.
