--- a/Sections/Mains/nudelhackfleisch.tex
+++ b/Sections/Mains/nudelhackfleisch.tex
@@ -32,7 +32,7 @@
 	{
 		\step Nudeln nach Packungsanleitung in reichlich Salzwasser bissfest kochen. Anschliessend abgiessen und abtropfen lassen.
 		\step Inzwischen Zwiebel und Knoblauch schälen und hacken. Paprika putzen, waschen und in Streifen schneiden.
-		\step 1 TL Öl in einer großen Pfanne erhitzen und Hackfleisch darin bei mittlerer Hitze unter Rühren krümelig 8 Minuten braten, mit Salz, Pfeffer, Cayennepfeffer. Auf einer Seite der Pfanne warm halten.
+		\step 1 TL Öl in einer grossen Pfanne erhitzen und Hackfleisch darin bei mittlerer Hitze unter Rühren krümelig 8 Minuten braten, mit Salz, Pfeffer, Cayennepfeffer. Auf einer Seite der Pfanne warm halten.
 		\step 1 TL Öl in einer gleichen Pfanne erhitzen, Zwiebel und Knoblauch bei mittlerer Hitze 2 Minuten anbraten.
 		\step Paprika dazugeben, 2 Minuten braten.
 		\step Fleisch, Nudeln und zerbröselten Käse ergänzen, alles mischen und weitere 2 Minuten dünsten. 
