--- a/Sections/Breakfast/tomatenomelette.tex
+++ b/Sections/Breakfast/tomatenomelette.tex
@@ -27,7 +27,7 @@
 	
 	\preparation
 	{
-		\step Rucola waschen, trocknen und fein hacken. Frühlingszwiebeln waschen und in dünne Scheiben schneiden. Petersilien abzupfen und grob hacken.
+		\step Rucola waschen, trocknen und fein hacken. Frühlingszwiebeln waschen und in dünne Scheiben schneiden. Die Petersilie abzupfen und grob hacken.
 		\step Eier mit Rahm verquirlen. Salzen, Pfeffern und den Käse unterrühren. 
 		\step  Butter und Öl in einer beschichteten Pfanne erhitzen. Die Hälfte der Frühlingszwiebeln darin 1–2 Minuten dünsten.
 		\step Die restlichen Frühlingszwiebeln und die Eiermasse zugeben, mit Rucola und Petersilie bestreuen.
