--- a/Sections/Breakfast/dinkelquarkbrot.tex
+++ b/Sections/Breakfast/dinkelquarkbrot.tex
@@ -28,7 +28,7 @@
 	{
 		\step Quark, Ei, Öl, Salz und Zucker in einer Schüssel glatt rühren.
 		\step Mehl und Backpulver mischen, zugeben und mit den Knethaken des Handrührers zu einem glatten Teig kneten.
-		\step Teig auf der bemehlten Arbeitsfläche mit den Händen zu einer Rolle von ca. 7 cm Ø rollen und in 8 gleich große Stücke schneiden. Zwischen den Handflächen zu Kugeln rollen und auf ein mit Backpapier belegtes Backblech legen.
+		\step Teig auf der bemehlten Arbeitsfläche mit den Händen zu einer Rolle von ca. 7 cm Ø rollen und in 8 gleich grosse Stücke schneiden. Zwischen den Handflächen zu Kugeln rollen und auf ein mit Backpapier belegtes Backblech legen.
 		\step Oberseite der Brötchen mit einem scharfen Küchenmesser (oder der Küchenschere) über Kreuz ca. 1 cm tief einschneiden.
 		\step  Im vorgeheizten Backofen bei 200 Grad (Gas 3, Umluft 180 Grad) auf der 2. Schiene von unten 20 Minuten backen. Lauwarm oder kalt servieren.
 	}
