--- a/Sections/Smoothies/gruenesmoothies.tex
+++ b/Sections/Smoothies/gruenesmoothies.tex
@@ -42,7 +42,7 @@
 	\hint
 	{
 		Den Smoothie mit Zitronen- oder Limettensaft nach Belieben abschmecken.
-		Anstatt Wasser kann auch Mandelmich verwendet werden.
+		Anstatt Wasser kann auch Mandelmilch verwendet werden.
 	}
 	
 \end{recipe}
