--- a/Sections/Smoothies.tex
+++ b/Sections/Smoothies.tex
@@ -10,3 +10,8 @@
 
 \newpage
 \input{Sections/Smoothies/gruenesmoothies.tex}
+
+\newpage
+\input{Sections/apfelsmoothie/apfelsmoothie.tex}
+
+\newpage
