--- a/Sections/Breakfast/birchermueesli.tex
+++ b/Sections/Breakfast/birchermueesli.tex
@@ -16,7 +16,7 @@
 		\unit[100]{g} & feine Haferflocken \\
 		& Nüsse \\
 		\unit[1.5]{dl} & Milch \\
-		\unit[360]{g} & Joghurt nature \\
+		\unit[360]{g} & Joghurt \\
 		2 & Äpfel \\
 		1 & Banane \\
 		\unit[250]{g} & gemischte Beeren \\
@@ -26,7 +26,7 @@
 	\preparation
 	{
 		\step Haferflocken mit Milch und Joghurt mischen
-		\step Äpfel mit Schale in Müsli raffeln. Banane in kleine Stücke schneiden und dazu geben. Beeren dazu geben. Alles gut mischen.
+		\step Äpfel mit Schale in Müsli geben. Banane in kleine Stücke schneiden und dazu geben. Beeren dazu geben. Alles gut mischen.
 		\step Rahm steif schlagen
 		\step Nüsse klein hacken und dazu geben
 		\step Mit Schlagrahm garnieren
