--- a/Sections/Mains/gemuesepita.tex
+++ b/Sections/Mains/gemuesepita.tex
@@ -34,7 +34,7 @@
 	{
 		\step Rüebli und Paprika waschen und klein schneiden.
 		\step Zwiebeln und Knoblauch schälen und schneiden.
-		\step Petersilien waschen und klein hacken. 
+		\step Die Petersilie waschen und klein hacken. 
 		\step Joghurt, Zitronensaft, Öl, Knoblauch und Petersilie verrühren. Mit Salz und Pfeffer würzen.
 		\step Gemüse und Sauce vermischen.
 		\step Camembert in Scheiben schneiden und mit dem Gemüse in die Pitataschen füllen.
