--- a/Sections/Mains/reishuhn.tex
+++ b/Sections/Mains/reishuhn.tex
@@ -35,7 +35,7 @@
 	{
 		\step Poulet abspülen, trocken tupfen und in Stücke schneiden. Stücke auf Spiesse stecken. Ingwer und Knoblauch schälen und fein hacken. 2 EL Sesamöl, 2 EL Sojasauce mit Ingwer und Knoblauch vermischen und die Spiesse damit marinieren. Spiesse etwa 30 Minuten im Kühlschrank ziehen lassen.
 		\step Reis gemäss Anleitung kochen. Anschliessend vom Herd nehmen, Reis auflockern und 10 Minuten abkühlen lassen.
-		\step Rüebli, Frühlingszwiebeln und Mungosprossen putzen bezwiehungsweise abspühlen. Papaya schälen, halbieren und Kerne entfernen, dann in kleine Stücke schneiden. Reis mit Papay und Gemüse vermengen.
+		\step Rüebli, Frühlingszwiebeln und Mungosprossen putzen beziehungsweise abspülen. Papaya schälen, halbieren und Kerne entfernen, dann in kleine Stücke schneiden. Reis mit Papaya und Gemüse vermengen.
 		\step Restliches Sesamöl, Sojasauce, 2 EL Wasser mit Erdnussbutter und Limettensaft vermengen und mit Cayennepfeffer würzen. Erdnusskerne dazu geben.
 		\step Spiesse bei mittlerer Hitze 7-10 Minuten anbraten. Salat auf Teller geben, Sauce darüber träufeln und Spiesse darüber geben.
 	}
